# Eigen

./: .gitignore  README.md
01_Eigen/: CMakeLists.txt  README.md  main.cpp
01_Eigen/include/: eigen_util.h
01_eigen/: main.cpp
02_dhQuat/: CMakeLists.txt  README.md  main.cpp  makerotate_test.asv  makerotate_test.m  makerotate_test.py
02_dhQuat/3d/: dhMat.cpp  dhMat.h  dhQuat.cpp  dhQuat.h  dhVector.cpp  dhVector.h  dhVector4.cpp  dhVector4.h  stdafx.cpp  stdafx.h
03_Sophus/: CMakeLists.txt  README.md  main.cpp
04_Sophus_CV/: CMakeLists.txt  README.md  main.cpp
TestEigen/: TestEigen.cbp  TestEigen.depend  TestEigenVS.sln  installation.md  main.cpp
TestEigen/TestEigenVS/: ReadMe.txt  TestEigenVS.cpp  TestEigenVS.vcxproj  TestEigenVS.vcxproj.filters  stdafx.cpp
common/include/: eigen_util.h
